ingress/gw-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
  namespace: httpbin-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - hosts:
    - "httpbin.example.com"
    port:
      number: 80
      name: http
      protocol: HorizontalPodAutoscaler
tls:
  credentialaName: cert-name # replace with name of the secret u defined for ur certificate 
  mode: SIMPLE

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: ns-test
spec:
  gateways:
  - ns-test/app-gw-name
  hosts:
  - "httpbin.example.com"
  http:
  # - match:
  #   - uri:
  #       prefix: /status
  #   - uri:
  #       prefix: /delay
  #   route:
  #   - destination:
  #       port:
  #         number: 8000
  #       host: httpbin
    - match:
        - uri:
            prefix: /  # replace with the prefix for ur appliction 
          route:
          - destination:
              host: app-name-service-svc # replace with ur app service name 
              port:
                number: 8080 # replace with port defined in ur app service name


---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bookinfo-ratings
  namespace: ns-test
spec:
  host: app-name-svc.namespace.svc.cluster.local
  trafficPolicy:
    tls: 
      mode: ISTIO_MUTUAL
